[package]
name = "linovelib-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.4", features = ["derive"] }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }
